[1.5.0] - Fix unit tests - Refactor