@@ -3,7 +3,6 @@ package com.igorgorbunov3333.timer.service.pomodoro.impl;
 import com.igorgorbunov3333.timer.model.dto.PeriodDto;
 import com.igorgorbunov3333.timer.model.dto.pomodoro.PomodoroDto;
 import com.igorgorbunov3333.timer.service.exception.PomodoroException;
-import com.igorgorbunov3333.timer.service.pomodoro.DailyPomodoroService;
 import com.igorgorbunov3333.timer.service.util.CurrentTimeService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -14,7 +13,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -29,8 +29,6 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
     private DefaultPomodoroFreeSlotFinderService testee;
 
     @Mock
-    private DailyPomodoroService dailyPomodoroService;
-    @Mock
     private CurrentTimeService currentTimeService;
 
     @Test
@@ -38,7 +36,8 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
         LocalDateTime currentTime = LocalDateTime.of(2022, 5, 10, 22, 0, 0);
         when(currentTimeService.getCurrentDateTime()).thenReturn(currentTime);
 
-        PeriodDto actual = testee.findFreeSlotInCurrentDay();
+        PeriodDto actual = testee.findFreeSlotInCurrentDay(Collections.emptyList());
+
         assertThat(actual.getStart()).isEqualTo(currentTime.minusMinutes(1L).minusMinutes(20L));
         assertThat(actual.getEnd()).isEqualTo(currentTime.minusMinutes(1L));
     }
@@ -51,10 +50,8 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
         ZonedDateTime pomodoroStartTime = currentTime.minusMinutes(30L).atZone(ZoneOffset.UTC);
         ZonedDateTime pomodoroEndTime = currentTime.minusMinutes(10L).atZone(ZoneOffset.UTC);
         PomodoroDto pomodoro = mockPomodoro(pomodoroStartTime, pomodoroEndTime);
-        when(dailyPomodoroService.getDailyPomodoros())
-                .thenReturn(new ArrayList<>(List.of(pomodoro)));
 
-        PeriodDto actual = testee.findFreeSlotInCurrentDay();
+        PeriodDto actual = testee.findFreeSlotInCurrentDay(Collections.singletonList(pomodoro));
 
         assertThat(actual.getStart()).isEqualTo(pomodoroStartTime.toLocalDateTime().minusMinutes(1L).minusMinutes(20L));
         assertThat(actual.getEnd()).isEqualTo(pomodoroStartTime.toLocalDateTime().minusMinutes(1L));
@@ -77,10 +74,7 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
         ZonedDateTime thirdPomodoroEndTime = thirdPomodoroStartTime.plusMinutes(20L);
         PomodoroDto thirdPomodoro = mockPomodoro(thirdPomodoroStartTime, thirdPomodoroEndTime);
 
-        when(dailyPomodoroService.getDailyPomodoros())
-                .thenReturn(new ArrayList<>(List.of(firstPomodoro, secondPomodoro, thirdPomodoro)));
-
-        PeriodDto actual = testee.findFreeSlotInCurrentDay();
+        PeriodDto actual = testee.findFreeSlotInCurrentDay(Arrays.asList(firstPomodoro, secondPomodoro, thirdPomodoro));
 
         assertThat(actual.getStart()).isEqualTo(firstPomodoroStartTime.toLocalDateTime().minusMinutes(1L).minusMinutes(20L));
         assertThat(actual.getEnd()).isEqualTo(firstPomodoroStartTime.toLocalDateTime().minusMinutes(1L));
@@ -103,10 +97,7 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
         ZonedDateTime thirdPomodoroEndTime = thirdPomodoroStartTime.plusMinutes(20L);
         PomodoroDto thirdPomodoro = mockPomodoro(thirdPomodoroStartTime, thirdPomodoroEndTime);
 
-        when(dailyPomodoroService.getDailyPomodoros())
-                .thenReturn(new ArrayList<>(List.of(firstPomodoro, secondPomodoro, thirdPomodoro)));
-
-        PeriodDto actual = testee.findFreeSlotInCurrentDay();
+        PeriodDto actual = testee.findFreeSlotInCurrentDay(Arrays.asList(firstPomodoro, secondPomodoro, thirdPomodoro));
 
         assertThat(actual.getStart()).isEqualTo(thirdPomodoroStartTime.toLocalDateTime().minusMinutes(1L).minusMinutes(20L));
         assertThat(actual.getEnd()).isEqualTo(thirdPomodoroStartTime.toLocalDateTime().minusMinutes(1L));
@@ -118,7 +109,7 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
         when(currentTimeService.getCurrentDateTime()).thenReturn(currentTime);
 
         assertThatExceptionOfType(PomodoroException.class)
-                .isThrownBy(() -> testee.findFreeSlotInCurrentDay());
+                .isThrownBy(() -> testee.findFreeSlotInCurrentDay(List.of()));
     }
 
     @Test
@@ -134,11 +125,8 @@ class DefaultPomodoroFreeSlotFinderServiceTest {
         ZonedDateTime secondPomodoroEndTime = secondPomodoroStartTime.plusMinutes(20L);
         PomodoroDto secondPomodoro = mockPomodoro(secondPomodoroStartTime, secondPomodoroEndTime);
 
-        when(dailyPomodoroService.getDailyPomodoros())
-                .thenReturn(new ArrayList<>(List.of(firstPomodoro, secondPomodoro)));
-
         assertThatExceptionOfType(PomodoroException.class)
-                 .isThrownBy(() -> testee.findFreeSlotInCurrentDay());
+                 .isThrownBy(() -> testee.findFreeSlotInCurrentDay(Arrays.asList(firstPomodoro, secondPomodoro)));
     }
 
     private PomodoroDto mockPomodoro(ZonedDateTime start, ZonedDateTime end) {
